syntax = "proto3";

package auth;

option go_package = "github.com/DarkXPixel/Vibe/proto/auth";

service AuthService {
    rpc SendVerificationCode(PhoneNumberRequest) returns (SendCodeResponse);
    rpc VerifyCode(VerifyCodeRequest) returns (AuthResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenRespone);
    //rpc ValidateToken(TokenRequest) returns (UserSession);
}

message PhoneNumberRequest {
    string phone_number = 1;
}

message SendCodeResponse {
    string message = 1;
    bool success = 2;
    string token = 3;
}

message VerifyCodeRequest {
    string phone_number = 1;
    string code = 2;
    string token = 3;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenRespone {
    bool success = 1;
    string user_id = 2;
}

message AuthResponse {
    bool success = 1;
    string auth_token = 2;
    string user_id = 3;
    string message = 4;
}

// message UserSession {
//     string user_id = 1;
//     string username = 2;
//     bool is_valid = 3;
// }
